--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,10 @@
 {
     "name": "chipulaja/magento2-blank-module",
-    "description": "N/A",
+    "description": "Blank Module for magento 2",
     "config": {
         "sort-packages": true
     },
+    "license": "MIT",
     "require": {
         "php": "~7.1.3||~7.2.0",
         "magento/framework": "102.0.*"
@@ -17,5 +18,5 @@
             "Chipulaja\\Magento\\BlankModule\\": ""
         }
     },
-    "version": "0.0.1"
+    "version": "v0.0.1"
 }
